==> Frogieder/TMC2209-pico/src/TMC2209/TMC2209.cpp <==
#include "src/TMC2209.hpp"

void TMC2209::setHardwareEnablePin(uint8_t hardware_enable_pin)
{
  hardware_enable_pin_ = hardware_enable_pin;
  gpio_init(hardware_enable_pin_);
  gpio_set_dir(hardware_enable_pin_, GPIO_OUT);
  gpio_put(hardware_enable_pin_, true);
}

void TMC2209::enable()
{
  if (hardware_enable_pin_ >= 0)
  {
    gpio_put(hardware_enable_pin_, 1);
  }
  chopper_config_.toff = toff_;
  writeStoredChopperConfig();
}

void TMC2209::disable()
{
  if (hardware_enable_pin_ >= 0)
  {
    gpio_put(hardware_enable_pin_, 1);
  }
  chopper_config_.toff = TOFF_DISABLE;
  writeStoredChopperConfig();
}

int TMC2209::serialRead()
{
  if (hardware_serial_ptr_ != nullptr && uart_is_readable_within_us(hardware_serial_ptr_, 3000))
  {

    return uart_getc(hardware_serial_ptr_);
  }
  return 0;
}

template<typename Datagram>
void TMC2209::sendDatagramBidirectional(Datagram & datagram,
  uint8_t datagram_size)
{
  uint8_t byte;

  // Wait for the transmission of outgoing serial data to complete
  serialFlush();

  // clear the serial receive buffer if necessary
  while (serialAvailable() > 0)
  {
    byte = serialRead();
  }

  // write datagram
  for (uint8_t i=0; i<datagram_size; ++i)
  {
    byte = (datagram.bytes >> (i * BITS_PER_BYTE)) & BYTE_MAX_VALUE;
    serialWrite(byte);
  }

  // Wait for the transmission of outgoing serial data to complete
  serialFlush();

  // wait for bytes sent out on TX line to be echoed on RX line
  uint32_t echo_delay = 0;
  while ((serialAvailable() < datagram_size) and
    (echo_delay < ECHO_DELAY_MAX_MICROSECONDS))
  {
    sleep_us(ECHO_DELAY_INC_MICROSECONDS);
    echo_delay += ECHO_DELAY_INC_MICROSECONDS;
  }

  if (echo_delay >= ECHO_DELAY_MAX_MICROSECONDS)
  {
    return;
  }

  // clear RX buffer of echo bytes
  for (uint8_t i=0; i<datagram_size; ++i)
  {
    byte = serialRead();
  }
}

uint32_t TMC2209::read(uint8_t register_address)
{
  ReadRequestDatagram read_request_datagram;
  read_request_datagram.bytes = 0;
  read_request_datagram.sync = SYNC;
  read_request_datagram.serial_address = serial_address_;
  read_request_datagram.register_address = register_address;
  read_request_datagram.rw = RW_READ;
  read_request_datagram.crc = calculateCrc(read_request_datagram, READ_REQUEST_DATAGRAM_SIZE);

  sendDatagramBidirectional(read_request_datagram, READ_REQUEST_DATAGRAM_SIZE);

  uint32_t reply_delay = 0;
  while ((serialAvailable() < WRITE_READ_REPLY_DATAGRAM_SIZE) and
    (reply_delay < REPLY_DELAY_MAX_MICROSECONDS))
  {
    sleep_us(REPLY_DELAY_INC_MICROSECONDS);
    reply_delay += REPLY_DELAY_INC_MICROSECONDS;
  }

  if (reply_delay >= REPLY_DELAY_MAX_MICROSECONDS)
  {
    return 0;
  }

  uint64_t byte;
  uint8_t byte_count = 0;
  WriteReadReplyDatagram read_reply_datagram;
  read_reply_datagram.bytes = 0;
  for (uint8_t i=0; i<WRITE_READ_REPLY_DATAGRAM_SIZE; ++i)
  {
    byte = serialRead();
    read_reply_datagram.bytes |= (byte << (byte_count++ * BITS_PER_BYTE));
  }

  return reverseData(read_reply_datagram.data);
}
